--- a/bio/index.html
+++ b/bio/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Daniel Zhao</title>
+        <title>Bio — Daniel Zhao</title>
         <link href="/styles/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,400,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -50,7 +50,7 @@ more informed policy decisions, and equitably improve the qualify of life for al
                 <h2>A few of my favorite things</h2>
                 <div class="cols">
                     <div class="box quarter">
-                        <h4>Publications</h4>
+                        <h4>News</h4>
                         <ul class="no-mark">
                             <li>New York Times</li>
                             <li>Yale Daily News</li>
@@ -86,7 +86,7 @@ more informed policy decisions, and equitably improve the qualify of life for al
                             <li>Starbucks</li>
                             <li>Pineapple on pizza</li>
                             <li>Beijing duck</li>
-                            <li>All-you-can-eat sushi</li>
+                            <li>Unlimited sushi</li>
                         </ul>
                     </div>
                 </div>
@@ -95,7 +95,7 @@ more informed policy decisions, and equitably improve the qualify of life for al
                     <ul class="no-mark">
                         <li><strong>Strange Stones: Dispatches from East and West </strong>by Peter Hessler</li>
                         <li><strong>Brave New World</strong> by Aldous Huxley and <strong>1984</strong> by George Orwell</li>
-                        <li><strong>The Signal and the Noise: Why So Many Predictions Fail — But Some Don't</strong> by Nate Silver</li>
+                        <li><strong>The Signal and the Noise: Why So Many Predictions Fail — But Some Don't</strong> by Nate Silver asdfasdf asdfasdf asdfas asdf asdfasdf asfd</li>
                         <li><strong>Hillbilly Elegy: A Memoir of a Family and Culture in Crisis</strong> by J. D. Vance</li>
                         <li><strong>Little Brother</strong> by Cory Doctorow</li>
                     </ul>
