--- a/bio/index.html
+++ b/bio/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Bio — Daniel Zhao</title>
         <link href="/styles/main.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,400,600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,400,400i,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     </head>
     <body>
         <header>
@@ -95,7 +96,7 @@ more informed policy decisions, and equitably improve the qualify of life for al
                     <ul class="no-mark">
                         <li><strong>Strange Stones: Dispatches from East and West </strong>by Peter Hessler</li>
                         <li><strong>Brave New World</strong> by Aldous Huxley and <strong>1984</strong> by George Orwell</li>
-                        <li><strong>The Signal and the Noise: Why So Many Predictions Fail — But Some Don't</strong> by Nate Silver asdfasdf asdfasdf asdfas asdf asdfasdf asfd</li>
+                        <li><strong>The Signal and the Noise: Why So Many Predictions Fail — But Some Don't</strong> by Nate Silver</li>
                         <li><strong>Hillbilly Elegy: A Memoir of a Family and Culture in Crisis</strong> by J. D. Vance</li>
                         <li><strong>Little Brother</strong> by Cory Doctorow</li>
                     </ul>
