--- a/bio/index.html
+++ b/bio/index.html
@@ -23,7 +23,7 @@
                 <img src="/media/profile.jpg" id="bio-prof-pic">
                 <h1>Daniel Zhao</h1>
                 <h3>I’m a junior at Yale studying data science and global affairs. I'm passionate about tech policy, modernizing government, smart cities, and the future of mobility.</h3>
-                <p class="cut">I'm a technologist at heart, but I care immensely about how policies impact real people. I want to help cities and governments leverage innovation to more efficiently deliver services, make more informed policy decisions, and equitably improve the qualify of life for all members of society.</p>
+                <p class="cut">I'm a technologist at heart, but I care immensely about how policies impact real people. I want to help cities and governments leverage innovation to more efficiently deliver services, make more informed policy decisions, and equitably improve the quality of life for all members of society.</p>
                 <div class="social-links-prof">
                     <span><a href="mailto:iamdanzhao@gmail.com" class="fa fa-pencil" target="_blank"></a><a href="mailto:daniel@danielzhao.com"><strong>Email me</strong></a> at daniel@danielzhao.com</span>
                     <span><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" class="fa fa-file" target="_blank"></a><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok"><strong>Resume</strong></a> [as of July 27, 2019]</span>
