--- a/bio/index.html
+++ b/bio/index.html
@@ -133,6 +133,8 @@
                         <h3>Website</h3>
                         <p class="description">This site is coded by hand with HTML, CSS, JavaScript, and lots of love. It's hosted for free on <strong><a href="https://pages.github.com/" target="_blank">GitHub Pages</a></strong>, which means you can fork the <strong><a href="https://github.com/iamdanzhao/iamdanzhao.github.io">GitHub repo</a></strong> to make your own personal site!</p>
                         <p class="description">Check out <strong><a href="https://blog.ronakshah.net/The-Complete-Github-Personal-Website-Guide/" target="_blank">Ronak Shah's guide</a></strong> to setting up your own website on GitHub Pages.</p>
+                    </div>
+                    <div class="half">
                         <h3>Design</h3>
                         <p class="description">I fell in love with the <strong><a href="https://www.ibm.com/plex/" target="_blank">IBM Plex</a></strong> font family ever since I first came across it. I now use Plex Sans across my website and resume, and Plex Serif and Plex Mono variants where appropriate. On my website, the fonts are served via <strong><a href="https://fonts.google.com/specimen/IBM+Plex+Sans" target="_blank">Google Web Fonts</a></strong>.</p>
                         <p class="description">Primary accent colors are <span class="blue-block">#0083ff</span> and <span class="pink-block">#ff5470</span>.</p>
@@ -141,6 +143,8 @@
                         <h3>Photos</h3>
                         <p class="description">I've been using my trusty <strong>Canon Rebel T5i</strong> for over six years now. I started with the kit lens, but I now mostly use the <strong>Sigma 18-35mm f/1.8 Art</strong>. On some occasions I'll fall back to the <strong>Canon EF 50mm f/1.8</strong>.</p>
                         <p class="description">I edit my photos with <strong>Adobe Lightroom Classic CC</strong> — I'll switch to the cloud version when it reaches feature parity and once storage gets cheaper.</p>
+                    </div>
+                    <div class="half">
                         <h3>Tech</h3>
                         <p class="description">I'm an all-Windows guy: my primary workhorse is the <strong>Dell XPS 15 2-in-1</strong>, and I recently picked up a cheap <strong>Microsoft Surface Go</strong> to work on-the-go.</p>
                         <p class="description">I oraganize nearly my entire digital life in <strong><a href="http://notion.so" target="_blank">Notion</a></strong>. I describe it as a mix of Simplenote, Evernote, and Trello, and I'm a huge fan. <strong><a href="https://www.notion.so/?r=6a41f60cf7ad4eebafe33b0fa3960a57" target="_blank">Use my referral link</a></strong> for two free months of Notion Premium!</p>
