--- a/bio/index.html
+++ b/bio/index.html
@@ -147,7 +147,7 @@
                     <div class="half">
                         <h3>Tech</h3>
                         <p class="description">I'm an all-Windows guy: my primary workhorse is the <strong>Dell XPS 15 2-in-1</strong>, and I recently picked up a cheap <strong>Microsoft Surface Go</strong> to work on-the-go.</p>
-                        <p class="description">I oraganize nearly my entire digital life in <strong><a href="http://notion.so" target="_blank">Notion</a></strong>. I describe it as a mix of Simplenote, Evernote, and Trello, and I'm a huge fan. <strong><a href="https://www.notion.so/?r=6a41f60cf7ad4eebafe33b0fa3960a57" target="_blank">Use my referral link</a></strong> for two free months of Notion Premium!</p>
+                        <p class="description">I organize nearly my entire digital life in <strong><a href="http://notion.so" target="_blank">Notion</a></strong>. I describe it as a mix of Simplenote, Evernote, and Trello, and I'm a huge fan. <strong><a href="https://www.notion.so/?r=6a41f60cf7ad4eebafe33b0fa3960a57" target="_blank">Use my referral link</a></strong> for two free months of Notion Premium!</p>
                     </div>
                 </div>
                 
