enable google analytics

--- a/bio/index.html
+++ b/bio/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
+        <!-- IF YOU ARE FORKING, REMOVE THESE LINES OF CODE, STARTING HERE -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144726595-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-144726595-1');
+        </script>
+        <!-- REMOVE, ENDING HERE -->
+        
         <meta charset="utf-8">
         <title>Bio — Daniel Zhao</title>
         <link href="/styles/main.css" rel="stylesheet">
