small text updates on homepage and bio

--- a/bio/index.html
+++ b/bio/index.html
@@ -39,7 +39,7 @@
                 <p class="cut">I'm a technologist at heart, but I care immensely about how policies impact real people. I want to help cities and governments leverage innovation to more efficiently deliver services, make more informed policy decisions, and equitably improve the quality of life for all members of society.</p>
                 <div class="social-links-prof">
                     <span><a href="mailto:iamdanzhao@gmail.com" class="fa fa-pencil" target="_blank"></a><a href="mailto:daniel@danielzhao.com"><strong>Email me</strong></a> at daniel@danielzhao.com</span>
-                    <span><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" class="fa fa-file" target="_blank"></a><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok"><strong>Resume</strong></a> [as of July 27, 2019]</span>
+                    <span><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" class="fa fa-file" target="_blank"></a><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok"><strong>Resume</strong></a> [Sept 18, 2019]</span>
                     <span><a href="https://linkedin.com/in/iamdanzhao" class="fa fa-linkedin" target="_blank"></a><a href="https://linkedin.com/in/iamdanzhao"><strong>LinkedIn</strong> @iamdanzhao</a></span>
                     <span><a href="https://github.com/iamdanzhao" class="fa fa-github" target="_blank"></a><a href="https://github.com/iamdanzhao"><strong>GitHub</strong> @iamdanzhao</a></span>
                     <span><a href="https://github.com/iamdanzhao" class="fa fa-twitter" target="_blank"></a><a href="https://twitter.com/iamdanzhao"><strong>Twitter</strong> @iamdanzhao</a></span>
@@ -64,6 +64,8 @@
                 <ul class="list-arrows">
                     <li>Big Data and Global Policies</li>
                     <li>Data Mining and Machine Learning</li>
+                    <li>Data Governance in the Digital Age</li>
+                    <li>Intellectual Property in the Digital Age</li>
                     <li>Approaches to International Development</li>
                     <li>Sustainability in the 21st Century</li>
                 </ul>
