--- a/bio/index.html
+++ b/bio/index.html
@@ -28,11 +28,14 @@
             </div>
             <nav>
                 <a href="/work/">Work</a>
+                <a href="/photos/">Photos</a>
                 <a href="/bio/">Bio</a>
             </nav>
         </header>
         <main>
             <div class="wide">
+            <div id="gradient-top"></div>
+            <div id="gradient-bottom"></div>
                 <img src="/media/profile.jpg" id="bio-prof-pic">
                 <h1>Daniel Zhao</h1>
                 <h3>I’m a junior at Yale studying data science and global affairs. I'm passionate about tech policy, modernizing government, smart cities, and the future of mobility.</h3>
@@ -138,7 +141,7 @@
             </div>
             <div class="wide sep"></div>
             <div class="wide">
-                <img src="/media/DZ_20190318_1238_9491.jpg">
+                <img src="/media/berlin/DZ_20190318_1238_9491.jpg">
             </div>
             <div class="wide sep"></div>
             <div class="wide">
