change to a better pic

--- a/bio/index.html
+++ b/bio/index.html
@@ -36,7 +36,7 @@
             <div class="wide">
             <div id="gradient-top"></div>
             <div id="gradient-bottom"></div>
-                <img src="/media/profile.jpg" id="bio-prof-pic">
+                <img src="/media/profile-1.jpg" id="bio-prof-pic">
                 <h1>Daniel Zhao</h1>
                 <h3>I’m a junior at Yale studying data science and global affairs. I'm passionate about tech policy, modernizing government, smart cities, and the future of mobility.</h3>
                 <p class="cut">I'm a technologist at heart, but I care immensely about how policies impact real people. I want to help cities and governments leverage innovation to more efficiently deliver services, make more informed policy decisions, and equitably improve the quality of life for all members of society.</p>
